--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,14 +29,20 @@
                     <div class="body">
                         <table class="blog" cellpadding="0" cellspacing="0"><tbody><tr><td valign="top"><div>           <table class="contentpaneopen">
                             <tbody><tr>
-                                <td class="contentheading" width="100%">
-                                Introductie                                 </td>
+                                <td class="conxtentheading" width="100%">
+                                                             </td>
                             </tr>
                         </tbody></table>
 
                         <table class="contentpaneopen">
-
-                {{ content }}
+<tbody>
+    <tr>
+        <td valign="top" colspan="2">
+                    {{ content }}
+            </td>
+    </tr>
+</tbody>
+        
             </table>
 
             <span class="article_seperator">&nbsp;</span>
