--- a/_layouts/default2.html
+++ b/_layouts/default2.html
@@ -50,7 +50,7 @@
         </div></td></tr></tbody></table></div>
         <div class="gallery">
 
-            </div> 
+            <div class="gallery_item"><a rel="lightbox[test]" title="klooster2.jpg" href="images/gallery/klooster2.jpg"> <img class="thumbnail_plaatje" src="images/gallery/klooster2.jpg" alt="klooster2.jpg" title="klooster2.jpg" width="65px"></a>
             </div>
             </div>
             </div>
@@ -65,18 +65,6 @@
 </div>
 <div id="overlay" style="display: none;"></div>
 <div id="lightbox" style="display: none;"><div id="outerImageContainer"><div id="imageContainer"><img id="lightboxImage"><div id="hoverNav"><a id="prevLink" href="#"></a><a id="nextLink" href="#"></a></div><div id="loading"><a id="loadingLink" href="#"><img src="images/loading.gif"></a></div></div></div><div id="imageDataContainer" class="clearfix"><div id="imageData"><div id="imageDetails"><span id="caption"></span><span id="numberDisplay"></span></div><div id="bottomNav"><a id="bottomNavClose" href="#"><img src="images/closelabel.gif"></a></div></div></div></div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
+
 </body>
 </html>
