--- a/_layouts/default2.html
+++ b/_layouts/default2.html
@@ -50,7 +50,7 @@
         </div></td></tr></tbody></table></div>
         <div class="gallery">
 
-            <div class="gallery_item"><a rel="lightbox[test]" title="klooster2.jpg" href="images/gallery/klooster2.jpg"> <img class="thumbnail_plaatje" src="images/gallery/klooster2.jpg" alt="klooster2.jpg" title="klooster2.jpg" width="65px"></a>
+            </div>
             </div>
             </div>
             </div>
