--- a/_layouts/default3.html
+++ b/_layouts/default3.html
@@ -50,7 +50,7 @@
         </div></td></tr></tbody></table></div>
         <div class="gallery">
 
-            <div class="gallery_item"><a rel="lightbox[test]" title="salonenkel.jpg" href="images/gallery/salonenkel.jpg"> <img class="thumbnail_plaatje" src="images/gallery/salonenkel.jpg" alt="salonenkel.jpg" title="salonenkel.jpg" width="65px"></a>
+            <div class="gallery_item"><a rel="lightbox[test]" title="salonenkel.jpg" href="images/gallery/salonenkel.jpg"> <img class="thumbnail_plaatje" src="images/gallery/salonenkel.jpg"</a>
             </div><div class="gallery_item"><a rel="lightbox[test]" title="salon1.jpg" href="images/gallery/salon1.jpg"> <img class="thumbnail_plaatje" src="images/gallery/salon1.jpg" alt="salon1.jpg" title="salon1.jpg" width="65px"></a>
             </div><div class="gallery_item"><a rel="lightbox[test]" title="salon2.jpg" href="images/gallery/salon2.jpg"> <img class="thumbnail_plaatje" src="images/gallery/salon2.jpg" alt="salon2.jpg" title="salon2.jpg" width="65px"></a>
             </div><div class="gallery_item"><a rel="lightbox[test]" title="klooster3.jpg" href="images/gallery/klooster3.jpg"> <img class="thumbnail_plaatje" src="images/gallery/klooster3.jpg" alt="klooster3.jpg" title="klooster3.jpg" width="65px"></a>
