--- a/_layouts/default3.html
+++ b/_layouts/default3.html
@@ -54,7 +54,7 @@
             </div><div class="gallery_item"><img class="thumbnail_plaatje" src="images/gallery/sillegaleriedoorkijk.jpg" alt="sillegaleriedoorkijk.jpg" title="sillegaleriedoorkijk.jpg" width="65px"></a>
             </div><div class="gallery_item"><a rel="lightbox[test]" title="salon2.jpg" href="images/gallery/salon2.jpg"> <img class="thumbnail_plaatje" src="images/gallery/salon2.jpg" alt="salon2.jpg" title="salon2.jpg" width="65px"></a>
             </div><div class="gallery_item"><a rel="lightbox[test]" title="klooster3.jpg" href="images/gallery/klooster3.jpg"> <img class="thumbnail_plaatje" src="images/gallery/klooster3.jpg" alt="klooster3.jpg" title="klooster3.jpg" width="65px"></a>
-            </div><div class="gallery_item"><a rel="lightbox[test]" title="klooster1.jpg" href="images/gallery/klooster1.jpg"> <img class="thumbnail_plaatje" src="images/gallery/klooster1.jpg" alt="klooster1.jpg" title="klooster1.jpg" width="65px"></a>
+            </div><div class="gallery_item"><a rel="lightbox[test]" title="kloostern.jpg" href="images/gallery/klooster1.jpg"> <img class="thumbnail_plaatje" src="images/gallery/klooster1.jpg" alt="klooster1.jpg" title="klooster1.jpg" width="65px"></a>
             </div><div class="gallery_item"><a rel="lightbox[test]" title="salon3.jpg" href="images/gallery/salon3.jpg"> <img class="thumbnail_plaatje" src="images/gallery/salon3.jpg" alt="salon3.jpg" title="salon3.jpg" width="65px"></a>
             </div>              </div>
         </div>
