--- a/_layouts/backgroundtreatments.html
+++ b/_layouts/backgroundtreatments.html
@@ -51,7 +51,7 @@
         <div class="gallery">
 
             <div class="gallery_item"><img class="thumbnail_plaatje" src="images/gallery/Salonduo.jpg" alt="Salonduo.jpg" title="Salonduo.jpg" width="180px"></a>
-            </div>
+            </div><div class="gallery_item"><img class="thumbnail_plaatje" src="images/gallery/salonenkel.jpg" alt="salonenkel.jpg" title="salonenkel.jpg" width="180px"></a>
             </div>
             </div>
             </div>
