--- a/_layouts/backgroundtreatments.html
+++ b/_layouts/backgroundtreatments.html
@@ -50,8 +50,8 @@
         </div></td></tr></tbody></table></div>
         <div class="gallery">
 
-            <div class="gallery_item"><img class="thumbnail_plaatje" src="images/gallery/Salonduo.jpg" alt="Salonduo.jpg" title="Salonduo.jpg" width="180px"></a>
-            </div><div class="gallery_item"><img class="thumbnail_plaatje" src="images/gallery/salonenkel.jpg" alt="salonenkel.jpg" title="salonenkel.jpg" width="180px"></a>
+            <div class="gallery_item"><img class="thumbnail_plaatje" src="images/gallery/salonenkel2.jpg" alt="salonenkel2.jpg" title="salonenkel2.jpg" width="180px"></a>
+            </div>
             </div>
             </div>
             </div>
