--- a/_layouts/backgroundhome.html
+++ b/_layouts/backgroundhome.html
@@ -52,10 +52,10 @@
 
             <div class="gallery_item"><img class="thumbnail_plaatje" src="images/gallery/salonenkel2.jpg" alt="salonenkel2.jpg" title="salonenkel2.jpg" width="65px"></a>
             </div><div class="gallery_item"><img class="thumbnail_plaatje" src="images/gallery/sillegaleriedoorkijk.jpg" alt="sillegaleriedoorkijk.jpg" title="sillegaleriedoorkijk.jpg" width="65px"></a>
-            </div><div class="gallery_item"><img class="thumbnail_plaatje" src="images/gallery/salonreceptie.jpg" alt="salonreceptie.jpg" title="salonreceptie.jpg" width="65px"></a>
             </div><div class="gallery_item"><img class="thumbnail_plaatje" src="images/gallery/sillekoffiehoek.jpg" alt="sillekoffiehoek.jpg" title="sillkoffiehoek.jpg" width="65px"></a>
-            </div><div class="gallery_item"><img class="thumbnail_plaatje" src="images/gallery/klooster1.jpg" alt="klooster1.jpg" title="klooster1.jpg" width="65px"></a>
-            </div><div class="gallery_item"><img class="thumbnail_plaatje" src="images/gallery/salon3.jpg" alt="salon3.jpg" title="salon3.jpg" width="65px"></a>
+            </div><div class="gallery_item"><img class="thumbnail_plaatje" src="images/gallery/salonreceptie.jpg" alt="salonreceptie.jpg" title="salonreceptie.jpg" width="120px"></a>
+            </div><div class="gallery_item"></a>
+            </div><div class="gallery_item"></a>
             </div>              </div>
         </div>
         <div class="footer">
